# Easy-Trainer-Modules

./: README.md
.github/workflows/: release.yml
extensions/test_arm/: install.sh  module.json  package.xml  setup.cfg  setup.py
extensions/test_arm/launch/: test_arm.launch.py
extensions/test_arm/test_arm/: test_arm_node.py
extensions/vive_udp_bridge/: install.sh  module.json  package.xml  setup.cfg  setup.py
extensions/vive_udp_bridge/vive_udp_bridge/: udp_json_to_ros2.py
robots/custom_interfaces/: CMakeLists.txt  install.sh  module.json  package.xml
robots/custom_interfaces/msg/: DynamixelData.msg
robots/dynamixel_ros/: CMakeLists.txt  install.sh  module.json  package.xml  setup.cfg  setup.py
robots/dynamixel_ros/dynamixel_ros/: dynamixel_node.py
robots/dynamixel_ros/launch/: dynamixel_node.launch.py
robots/dynamixel_ros/msg/: DynamixelData.msg
robots/frcobot_ros2/: install.sh  module.json
robots/gripper_ros/: install.sh  module.json  package.xml  setup.cfg  setup.py
robots/jaka_ros2/: install.sh  module.json
robots/onrobot-ros2/: install.sh  module.json
robots/piper_ros/: can_activate_main.sh  install.sh  module.json
robots/rbpodo_ros2/: install.sh  module.json
robots/ros2_kortex/: install.sh  module.json
robots/ros2_robotiq_gripper/: install.sh  module.json
robots/serial/: install.sh  module.json
robots/tm2_ros2/: README.md  install.sh  module.json
robots/unitree_ros/: install.sh  module.json  package.xml  setup.cfg  setup.py
sensors/webcam_publisher/: install.sh  module.json  package.xml  setup.cfg  setup.py
(+132 files in other folders)
