<package format="3">
  <name>dynamixel_ros</name>
  <version>0.0.0</version>
  <description>Dynamixel controller node for EasyTrainer stack.</description>

  <maintainer email="noreply@example.com">EasyTrainer</maintainer>
  <license>Proprietary</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>custom_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
